[tool.poetry]
name = "ml-template"
version = "0.1.0"
description = ""
authors = ["CeddrickArmel <35418979+CedrickArmel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
